--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.17.1",
     "mongoose": "^5.13.1",
     "multer": "^1.4.2",
-    "nodemon": "^2.0.9"
+    "nodemon": "^2.0.9",
+    "sharp": "^0.28.3"
   }
 }
