--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "mongoose": "^5.13.1",
     "multer": "^1.4.2",
     "nodemon": "^2.0.9",
-    "sharp": "^0.28.3"
+    "sharp": "^0.28.3",
+    "uuid": "^3.3.2"
   }
 }
