--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "gridstack": "^4.2.6",
     "mongoose": "^5.13.1",
     "multer": "^1.4.2",
     "nodemon": "^2.0.9",
