--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "gridstack": "^4.2.6",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.13.1",
+    "mongoose-paginate": "^5.0.3",
     "multer": "^1.4.2",
     "nodemon": "^2.0.9",
     "sharp": "^0.28.3",
