--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "mongoose-paginate": "^5.0.3",
     "multer": "^1.4.2",
     "nodemon": "^2.0.9",
+    "probe-image-size": "^7.2.1",
     "sharp": "^0.28.3",
     "uuid": "^3.3.2"
   }
