--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "Marcin Czaja",
   "license": "ISC",
   "dependencies": {
+    "@gumlet/gif-resize": "^1.3.1",
     "aws-sdk": "^2.939.0",
     "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
