--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "multer": "^1.4.2",
     "nodemon": "^2.0.9",
     "probe-image-size": "^7.2.1",
+    "request-ip": "^2.1.3",
     "sharp": "^0.28.3",
     "uuid": "^3.3.2"
   }
