--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "mongoose": "^5.13.1",
     "mongoose-paginate": "^5.0.3",
     "multer": "^1.4.2",
+    "node-fetch": "^2.6.7",
     "nodemon": "^2.0.9",
     "probe-image-size": "^7.2.1",
     "request-ip": "^2.1.3",
