--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
+    "ejs": "^3.1.8",
     "express": "^4.17.1",
     "gridstack": "^4.2.6",
     "jsonwebtoken": "^8.5.1",
