--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "node-fetch": "^2.6.7",
     "nodemon": "^2.0.9",
     "probe-image-size": "^7.2.1",
+    "redis": "^4.6.13",
     "request-ip": "^2.1.3",
     "sharp": "^0.28.3",
     "uuid": "^3.3.2"
